        Reviewed by Maciej.

http://bugs.webkit.org/show_bug.cgi?id=11508
        Undisable some warnings for JSImmediate.h

        Fix suggested by Don Gibson.

        * kjs/JSImmediate.h:
        Re-enable all MSVC warnings, move the remaining runtime checks
        to compile-time.



Canonical link: https://commits.webkit.org/14902@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@17723 268f45cc-cd09-0410-ab3c-d52691b4dbfc